--- a/thumbnail-generator-youtube.html
+++ b/thumbnail-generator-youtube.html
@@ -2,14 +2,14 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Youtube Thumbnail Generator - by kompiajaib</title>
+<title>Thumbnail Generator Youtube - by Skin Design</title>
 <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
 <div id="page_content">
-<h1>Youtube Thumbnail Generator</h1>
-<p>By <a href="http://www.kompiajaib.com/" title="Kompi Ajaib">KompiAjaib</a></p>
+<h1>Thumbnail Generator Youtube </h1>
+<p>By <a href="https://sk1ndesign.blogspot.com/" title="Skin Design">Skin Design</a></p>
   <form>
     <div class="form-group">
         <label for="videoID" class="example">Youtube Video ID example: <span class="ex-text">https://www.youtube.com/watch?v=</span><b>anMYu17aZT4</b></label>
